[Dipucr-Manu] - 2016-08-01 Subida inicial a la rama SIGM4.0-QUIJOTE del código de la Diputación Provincial de Ciudad Real.